--- a/server/package.json
+++ b/server/package.json
@@ -1,14 +1,19 @@
 {
   "name": "server",
-  "version": "0.0.0",
+  "description": "A Node.js and Express backend API for the Voting Game app, handling joke storage, emoji-based voting, and CRUD operations with MongoDB.",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "SET DEBUG=server:* & nodemon ./bin/www"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "cookie-parser": "~1.4.7",
+    "debug": "~4.4.0",
+    "express": "~4.21.2",
+    "morgan": "~1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
