--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "prettier.singleAttributePerLine": true,
+  "prettier.singleAttributePerLine": false,
   "prettier.quoteProps": "consistent",
   "prettier.arrowParens": "always",
   "prettier.bracketSameLine": true,
