--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "cookie-parser": "~1.4.7",
     "debug": "~4.4.0",
+    "dotenv": "^16.4.7",
     "express": "~4.21.2",
     "morgan": "~1.10.0"
   },
