:wrench: update the `.env.example`

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,2 +1,5 @@
-MONGODB_URI=mongodb://localhost:27017/itcamp25
-PORT=3000
+  MONGODB_URI=mongodb://127.0.0.1:27017/itcamp25
+  CORS_ORIGIN=http://localhost:8080
+  CORS_CREDENTIALS=true
+  NODE_ENV=development
+  PORT=3000
